# pi-rs

./: Cargo.toml  README.md  README_EN.md
src/: lib.rs  main.rs
src/agent/: events.rs  mod.rs  session.rs
src/cli/: args.rs  interactive.rs  mod.rs
src/compaction/: mod.rs  summarizer.rs
src/core/: config.rs  errors.rs  mod.rs  types.rs
src/extensions/: api.rs  loader.rs  mod.rs  types.rs
src/input/: completion.rs  handler.rs  mod.rs
src/prompts/: loader.rs  mod.rs
src/providers/: anthropic.rs  azure.rs  google.rs  groq.rs  mistral.rs  mod.rs  moonshot.rs  ollama.rs  openai.rs  provider.rs  registry.rs
src/session/: entry.rs  manager.rs  mod.rs
src/skills/: loader.rs  mod.rs
src/theme/: mod.rs  parser.rs
src/tools/: bash.rs  edit.rs  epkg.rs  find.rs  grep.rs  ls.rs  mod.rs  read.rs  tool.rs  write.rs
src/tui/: app.rs  components.rs  mod.rs  state.rs
src/utils/: mod.rs  shell.rs
tests/: agent_session_test.rs  args_test.rs  auth_test.rs  compaction_test.rs  core_test.rs  extension_test.rs  extensions_discovery_test.rs  frontmatter_test.rs  git_url_test.rs  input_test.rs  model_resolver_test.rs  package_command_test.rs  path_utils_test.rs  plan_mode_utils_test.rs  prompts_test.rs  provider_test.rs  resource_loader_test.rs  rpc_test.rs  session_selector_test.rs  session_test.rs  settings_test.rs  skills_test.rs  system_prompt_test.rs  theme_test.rs  tools_test.rs  tree_selector_test.rs  truncate_test.rs
