[package]
name = "pi-rs"
version = "0.1.0"
edition = "2021"
description = "Terminal AI coding agent - Rust implementation"
license = "MIT"
repository = "https://github.com/yourusername/pi-rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# File system operations
dirs = "5"
glob = "0.3"
walkdir = "2"

# Async streams
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Terminal UI
crossterm = "0.3"
ratatui = "0.28"
tokio-retry = "0.3"

# Encoding
encoding_rs = "0.8"

# Regex
regex = "1"

# Diff algorithm
similar = "2"

# Async traits
async-trait = "0.1"

# Once cell
once_cell = "1"

# Dotenv
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[lib]
name = "pi_rs"
path = "src/lib.rs"

[[bin]]
name = "pi"
path = "src/main.rs"
